# cppy

./: .gitignore  CMakeLists.txt  README.md
src/c/: builtins.cpp  builtins.h  cppy.h  cpy.h  helpers.cpp  helpers.h  pybuiltins.cpp  pybuiltins.h  pydict.cpp  pyfunction.cpp  pyfunction.h  pygarbagecollector.cpp  pygarbagecollector.h  pyglobalinstances.cpp  pyglobalinstances.h  pyhelpers.cpp  pyhelpers.h  pyint.cpp  pyint.h  pylist.cpp  pylist.h  pynone.cpp  pynone.h  pynotimplemented.h  pyobject.cpp  pyobject.h  pyrecursionctx.cpp  pyrecursionctx.h  pyscope.cpp  pyscope.h  pystring.cpp  pystring.h  pytraceback.cpp  pytraceback.h  pytype.cpp  pytype.h  pytypes.cpp  pytypes.h
src/python/: cppy.h  pybaseobject.cpp  pybaseobject.h  pybool.cpp  pybool.h  pybuiltins.h  pydict.cpp  pydict.h  pyfunction.cpp  pyfunction.h  pygarbagecollector.cpp  pygarbagecollector.h  pyglobalinstances.cpp  pyglobalinstances.h  pyhelpers.cpp  pyhelpers.h  pyint.cpp  pyint.h  pylist.cpp  pylist.h  pynone.cpp  pynone.h  pynotimplemented.cpp  pynotimplemented.h  pyobject.cpp  pyobject.h  pyscope.cpp  pyscope.h  pystring.cpp  pystring.h  pytraceback.cpp  pytraceback.h  pytuple.cpp  pytuple.h  pytype.cpp  pytype.h  pytypes.cpp  pytypes.h
src/transpiler/: CodeGeneration.py  PythonExpressions.py  Visitor.py  generate.bat  main.py  setup.py
src/transpiler/cppy/: CodeGeneration.py  PythonExpressions.py  Visitor.py  __main__.py
